# lark-identity-on-agentcore-interceptor

./: .env.example  .gitignore  README.md  app.py  cdk.json  pyproject.toml
agent/: Dockerfile  agent_core.py  identity.py  mcp_client.py  requirements.txt  server.py  test_agent.py
docs/: architecture.md
lambda/interceptor/: index.py
lambda/router/: identity.py  index.py  lark.py  test_router.py
lambda/tools/: index.py
lambda/web_api/: cognito_mint.py  identity.py  index.py  lark_oauth.py  test_web_api.py
scripts/: deploy.sh  destroy.sh  manage-allowlist.sh  setup-lark.sh  test.sh
stacks/: __init__.py  agentcore_stack.py  gateway_stack.py  observability_stack.py  router_stack.py  security_stack.py  webui_stack.py
tests/: README.md  test_webhook_smoke.py  test_wss_bridge.py
web-ui/: app.js  config.js  config.js.example  index.html  styles.css
