[project]
name = "lark-agent-cdk"
version = "0.1.0"
description = "CDK app for lark-agent on Bedrock AgentCore"
requires-python = ">=3.10"
dependencies = [
    "aws-cdk-lib>=2.170.0,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
    "cdk-nag>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "boto3>=1.35.0",
]

[tool.uv]
package = false
